--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,4 +2,15 @@ flake8==3.8.1
 mccabe==0.6.1
 pycodestyle==2.6.0
 pyflakes==2.2.0
+
+# Deps do pytest
+py==1.8.1
+more-itertools==4.0.0
+six==1.14.0
+more-itertools==8.3.0
+six==1.14.0
+attrs==19.3.0
+pluggy==0.13.1
+pytest==5.4.2
 -r requirements.txt
+
