--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -10,5 +10,10 @@ more-itertools==8.3.0
 attrs==19.3.0
 pluggy==0.13.1
 pytest==5.4.2
+
+# Coverage
+coverage==5.1
+pytest-cov==2.8.1
 -r requirements.txt
+
 
