--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -11,6 +11,9 @@ attrs==19.3.0
 pluggy==0.13.1
 pytest==5.4.2
 
+# Biblioteca pytest-mock
+pytest-mock==3.1.0
+
 # Coverage
 coverage==5.1
 pytest-cov==2.8.1
